# sentinel

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/sentinel/: __init__.py  cli.py  config.py  config_store.py  detection.py  fmt.py  pipeline.py
tests/: conftest.py  test_cycle2_domain.py  test_cycle4_domain_types_and_config.py  test_detection_composition.py  test_executor_composition.py  test_fmt.py  test_issue30_json_config_store.py  test_issue31_wake_proxy_docker_shims.py  test_issue32_wake_proxy_health_gate.py  test_issue33_wake_proxy_manager.py  test_issue34_ollama_advisor.py  test_issue35_launchagent_plist.py  test_issue36_launchctl_service_controller.py  test_issue37_daemon_runloop.py  test_issue38_status_reporter.py  test_issue39_typer_cli.py  test_issue40_e2e_integration.py  test_issue41_daemon_wakeproxy_seam.py  test_issue42_daemon_snapshot_persistence.py  test_pipeline_composition.py  test_pipeline_engine_wiring.py  test_scaffold.py
tests/docker/: test_docker_shims.py  test_idle_detector.py
tests/execute/: test_audit_logger.py  test_cycle3_domain.py  test_deny_list_path_guard.py  test_disk_cleanup.py  test_docker_container_stopper.py  test_execution_engine.py  test_file_shims.py  test_os_shims.py  test_project_activity_guard.py  test_verified_killer.py
tests/monitor/: test_disk_reader.py  test_memory_reader.py  test_pressure_reader.py  test_resource_sampler.py  test_rolling_history.py  test_swap_reader.py  test_system_clock.py
tests/notify/: test_notifier.py
tests/process/: test_frontmost_reader.py  (+4 more)
(+56 files in other folders)
