[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "macOS resource governor — memory pressure, swap, disk monitoring and auto-reclaim"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
