[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "macOS resource governor — memory pressure, swap, disk monitoring and auto-reclaim"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "typer>=0.12",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.21",
    "hypothesis>=6",
    "ruff>=0.4",
    "docker>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
